=head1 NAME

Changes - List of significant changes to DBIx::Pg::CallFunction

=head2 Changes in 0.014
  Support retrying a function call in some error cases.
  (Marko Tiikkaja)

  Retry on serialization failures and deadlocks in pg_proc_jsonrpc.
  (Marko Tiikkaja)

=head2 Changes in 0.013
  Use the correct datatype for comparisons against pg_proc.proname and
  pg_namespace.nspname, allowing indexes on said tables to be used.
  (Marko Tiikkaja)

=head2 Changes in 0.012
  Use croak to report execute failures from the caller's perspective
  with the name of the Pg function that was called. (Matthew Musgrove)

=head2 Changes in 0.011
  Added ALTER DEFAULT PRIVILEGES REVOKE ALL ON FUNCTIONS FROM PUBLIC; to documentation,
    to avoid granting access to stored procedures by default, which is not good when
    you have functions with SECURITY DEFINER, better to grant execute rights
    explicity for all functions.
  Included inc/, necessary for users without Module::Install.

=head2 Changes in 0.010
  Updated Documentation.

=head2 Changes in 0.009
  Updated Documentation.

=head2 Changes in 0.008
  Updated Documentation and made the call method private,
    renamed to _call.

=head2 Changes in 0.007
  Changed pg_proc_jsonrpcd into a plain PSGI App
    to let for e.g. Apache2, mod_perl and Plack::Handler::Apache2
    handle the server task.
  Added how-to on how to setup pg_proc_jsonrpc.psgi.

=head2 Changes in 0.006
  Optimized _proretset SQL query
  Makefile.PL format changed to Module::Install
  Add script pg_proc_jsonrpc, starting a JSON-RPC daemon

=head2 Changes in 0.005

  Added Plack PSGI example on how to create a JSON-RPC server,
  exposing the PostgreSQL database as a JSON-RPC service.
  Added support for functions with no arguments.

=head2 Changes in 0.004

  Added test-case to check if error is thrown when multiple functions
  matches.
  Moved entire proretset check to SQL. Before the SQL only selected